# Unrelated

./: .gitignore  BUILD_REQUIREMENTS.md  Cargo.toml  Fix-Choco-D.ps1  Fix-Chocolatey.ps1  IMPLEMENTATION.md  MCP_SERVER_PLAN.md  MINGW_INSTALLATION.md  README.md  RUST_INSTALLATION.md  WinSxS_DeleteSuperseded.ps1  analyze_winsxs.ps1  check_lang.ps1  check_lang2.ps1  check_lang3.ps1  check_windir_langs.ps1  dev_shell.ps1
ISOupdater/: DistroList.nsh  iso_updater.py  probe_downloads.py  probe_mint.py  probe_mint2.py  requirements.txt  retry_downloads.py
Ideas - concepts unrelate to all else/: Visionforais.md
biblemind/: PROJECT_STATUS.md  README.md  package.json  tsconfig.json
biblemind/apps/api/: .env.example  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
biblemind/apps/web/: .env.example  README.md  next.config.js  package.json  (+1 more)
gweled-1.0-beta1/po/: he.po
gweled-python/: analyze_assets.py  assets.py  board.py  extract_swf.py  main.py
holographic-thinking-chatgpt/: ARCHITECTURE.md  BUILD_SUMMARY.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.txt  README.md  manifest.yaml
holographic-thinking-chatgpt/engines/: 00-harm-evaluation.md  01-oracle.md  02-mechanical.md  03-tribunal.md  04-edgecase.md  05-multisource.md  06-synthesis.md  07-memory.md  08-learning.md  09-affect.md  10-parallel-oracle.md  INDEX.md
holographic-thinking-chatgpt/examples/: example-1-simple.md
holographic-thinking-chatgpt/prompts/: core-thinking.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.mjs
src/: lib.rs  main.rs  mcp_server.rs
(+23 files in other folders)
