[package]
name = "contextdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "contextdb"
path = "src/main.rs"

[dependencies]
# Compression
zstd = "0.13"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"

# Note: MCP server is implemented in Node.js (mcp-server/ directory)
# Rust core library provides CLI and library functions only

[lib]
name = "contextdb"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true

